--- a/src/components/CardItem/CardItem.css
+++ b/src/components/CardItem/CardItem.css
@@ -4,3 +4,12 @@
     padding: 5px;
     margin: 10px;
 }
+
+.card-footer p {
+    margin: 0;
+    align-self: center;
+}
+
+.quantity-i {
+    margin: 0 4px;
+}
